    FONT=...  Thanks to Samuel Thibault, closes: #508862.
  * On first install read defaults for the keyboard layout from
    /etc/X11/xorg.conf.  Julien Cristau provided the script parsing
    xorg.conf. Closes: #515685.
  * Store cached keymap in /etc/console-setup/cached.kmap.gz if possible.
    Thanks to Frédéric Boiteux, closes: #509117.
  
  [ Colin Watson ]
  * Fix property counts in Goha and legacy BDF fonts.
  * Fix keymap reduction not to try to express keymap A in terms of keymap B
    when B includes keys not mapped by A.
  * Sort the null variant to the top of the choices list rather than to the
    bottom.
  * Make %.ekmap target depend on MyKeyboardNames.pl.
  * Use printf rather than /bin/echo in setupcon; it's typically a shell
    builtin and is therefore faster.

  [ Christian Perrier ]
  * Debconf translations:
    - Brazilian Portuguese. Closes: #512457

 -- Anton Zinoviev <zinoviev@debian.org>  Sat, 29 Nov 2008 14:50:49 +0200

console-setup (1.28) unstable; urgency=low

  [ Debconf translations ]
  * Belarusian. Closes: #487293

 -- Christian Perrier <bubulle@debian.org>  Tue, 23 Sep 2008 19:49:58 +0200

console-setup (1.27) unstable; urgency=low

  [ Debconf translations ]
  * French
  * Basque. Closes: #490363
  * Turkish. Closes: #490365
  * Thai
  * Bulgarian
  * Swedish. Closes: #490569
  * German. Closes: #490714
  * Portuguese. Closes: #491011
  * Vietnamese. Closes: #491046
  * Bulgarian
  * Czech
  * Galician

 -- Christian Perrier <bubulle@debian.org>  Fri, 18 Jul 2008 11:33:49 +0200

console-setup (1.26) unstable; urgency=low

  [ Colin Watson ]
  * Add a template for the main menu item name.

  [ Debconf translations ]
  * Russian. Closes: #487242
  * Basque. Closes: #487313
  * Turkish. Closes: #487439
  * Swedish. Closes: #487308

 -- Christian Perrier <bubulle@debian.org>  Tue, 08 Jul 2008 20:40:35 +0200

console-setup (1.25) unstable; urgency=low

  [ Anton Zinoviev ]