@@ -1907,11 +1907,10 @@ else
     db_get console-setup/modelcode
     if [ "$RET" = "$default_model" ]; then
 	if [ "$layout" = br ]; then 
-	    model=abnt2
+	    db_set console-setup/modelcode abnt2
 	elif [ "$layout" = jp ]; then 
-	    model=jp106
+	    db_set console-setup/modelcode jp106
 	fi
-	db_set console-setup/modelcode "$model"
     fi
 fi
 
